# MLOps_AGH

./: .pre-commit-config.yaml  .sops.yaml  LICENSE  README.md  app.py  inference.py  iris_model.joblib  main.py  public_key.asc  pyproject.toml  secrets.yaml  settings.py  test_main.py  training.py
config/: .env.dev  .env.prod  .env.test
tests/: test_client.py  test_settings.py
