[project]
name = "mlops-agh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
    "xenon>=0.9.3",
]

[dependency-groups]
dev = [
    "pytest-dotenv>=0.5.2",
]
